# logic-parser

./: README.md  grammar  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
src/logic_parser/: cli.py  evaluation.py  transformation.py  utils.py
src/logic_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_interpreter.py  test_parser.py
